# OPTIMA_momentary_ema_detection

./: .gitignore  README.md  hello.py  pyproject.toml
OPTIMA_momentary_ema_detection/: __init__.py  createEMAFeatures.py  format_axis.py  plots.py  predict_momentary_EMA.py
lib/: config.yaml  definitions.yaml  parameters.yaml  styles.yaml
